--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>WIFE HOUSE</title>
 </head>
 <body>
-    <img src="img/house.png" width="200px" height="auto">
+    
+    <img src="https://i.ibb.co/tbcny4y/WIN-UPTO-2500.png" width="200px" height="auto">
    
     <div class="container">
         
