--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
   </head>
   <body>
   
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYdALMB59p083uM61X6QSOWwhKtOmo4fDkthoGP_nqV_qNFg/viewform?embedded=true" width="100%" height="300px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
     <div class="divboxx">
  <img src="papa.jpg" id="img">
  WIFE HOUSE FURNITURE
-
+ <a href="redeem.html">
     <img src="box.png"  id="img">
-<a href="redeem.html">
-    <div class="button">OPEN YOUR GIFT</div>
-</a>
+    </a>
+
+ 
   </div>
 
 
@@ -40,3 +41,6 @@
 
   </body>
 </html>
+
+
+
